image-galery/style.css
.header{
  width: 100%;
  
  border-bottom: 5px solid orange;
}
.wrapper {
  max-width: 91.43rem;
  margin: auto;
}

.header__container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  min-height: 70px;
}

.header__title {
  font-size: 2.3rem;
  font-weight: 900;
}


.camera {
  width: 38px;
  height: 38px;
}

.header__search {
  width: 350px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
}

.input {
  width: 100%;
  box-sizing: border-box;
  font-size: 1.2rem;
  border: 1px solid rgba(0, 0, 0, 0.25);
  padding: 8px 12px;
  border-radius: 25px;
  transition: all 0.30s ease-in-out;
  font-family: 'inter', sans-serif;
}

.svg__search {
  position: absolute;
  right: 0;
  top: 0;
  padding: 8px;
  cursor: pointer;
  border-radius: 15px;
  transition: all 0.5s;
}

.svg__search:hover {
  background-color: orange;
}

#search {
  width: 16px;
  height: 16px;
  text-align: center;
  display: block;
}

.container__img {
  max-width: 91.43rem;
  margin: auto;
}

.grid__img {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: flex-start;
}

.img {
  width: 380px;
  height: 214px;
  background-position: center;
  background-size: cover;
  border-radius: 2px;
  cursor: pointer;
  margin-top: 15px;
  transition: all 0.5s;
}

.img:hover {
  transform: scale(1.05);
  transition: all 0.5s;
}



.footer {
  margin: 0 auto;
  width: 100%; 
  height: 48px;
  border-top: 5px solid orange;
  margin-top: 15px;
}

.footer__mem {
  max-width: 91.43rem;
  margin: 0 auto;

  display: flex;
  justify-content: space-between;
  align-items: center;

  color: white;
  padding: 5px 0;
}

.footer a {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.footer a:hover {
  transform: scale(1.15);
  transition: all 0.5s;
}

